<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/calText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:ems="20"
        android:textSize="20sp"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/btnDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/division"
                android:layout_weight="1"/>


        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/btnNum7"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/number7"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnNum8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number8"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnNum9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number9"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnMulti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiple"
                android:layout_weight="1"/>


        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/btnNum4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/number4"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnNum5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number5"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnNum6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number6"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <Button
                android:id="@+id/btnNum1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/number1"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnNum2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number2"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnNum3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number3"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:layout_weight="1"/>

        </TableRow>
        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <Button
                android:id="@+id/btnNum0"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/number0"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/btnComma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comma"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:layout_weight="1"/>

        </TableRow>

    </TableLayout>



</LinearLayout>